text overflow fix

--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
     left: 				50%;
     transform: 			translate(-50%, -50%);
 	padding:			50px;
-	
+    overflow:           scroll;
+    max-height:         70%;
 
     background-color: 	white;
     border-radius:		2px;
@@ -25,7 +26,7 @@ body {
     font-size:			20px;
     font-weight:		bold;
 	
-	border-radius: 50px;
+    border-radius: 50px;
 }
 
 #question{
@@ -114,7 +115,7 @@ body {
 
 
 #dgb-d{
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     left: 10px;
 }
